# StockPulse

./: .gitignore  Dockerfile  README.md  debug.py  docker-compose.yaml  pyproject.toml
stockpulse/: __init__.py  app.py  db_connection.py  enviroments.py  environment.py  server.py
stockpulse/core/controllers/: product_controller.py  products_controller.py
stockpulse/core/models/: product_model.py
stockpulse/routes/: hello_router.py
stockpulse/routes/v1/: __init__.py  all_routes.py  product_routes.py
