[tool.poetry]
name = "stockpulse"
version = "0.1.0"
description = ""
authors = ["Adriano R. de Sousa <adrianorodriguesdsousa@ugpi.edu.br>"]
readme = "README.md"

[tool.poetry.scripts]
server = "stockpulse.server:run"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = "1.9.0"
sqlmodel = "^0.0.12"
mysql-connector-python = "^8.2.0"
pymysql = "^1.1.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
